fix yet another flag alignment issue

--- a/app/frontend/src/components/NameInfo.css
+++ b/app/frontend/src/components/NameInfo.css
@@ -33,6 +33,5 @@
 }
 
 .country-flag-tree {
-  margin-top: unset;
   margin-left: 2px;
 }
